src/objects/Question_Option__c.object
<CustomObject>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set as a default question option</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <description>Indexing the Question option</description>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Score_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show and hide score text field.</description>
        <inlineHelpText>Show and hide score text field.</inlineHelpText>
        <label>Is Score Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Lookup with Question</description>
        <label>Name</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Set value for question option</description>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Question Options</relationshipLabel>
        <relationshipName>Question_Options</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Define the score of question option.</description>
        <inlineHelpText>Define the score of question option.</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Set value for question option</description>
        <label>Value</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>Set weight for Question option</description>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Question Option</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>